# vestalink

./: .gitignore  README.md
.github/workflows/: ci.yml
.kiro/specs/advanced-vesting/: design.md  requirements.md
.kiro/specs/vestalink-scaffold/: design.md  requirements.md
.kiro/specs/vesting-contract/: design.md  requirements.md
contract/: Anchor.toml
contract/programs/vestalink/: Cargo.toml
contract/programs/vestalink/src/: error.rs  lib.rs  state.rs  utils.rs
contract/programs/vestalink/src/instructions/: config.rs  create.rs  mod.rs  revoke.rs  unlock.rs  vesta_faucet.rs  withdraw.rs
contract/programs/vestalink/tests/: litesvm_integration.rs
contract/tests/: admin_fee.ts  cancel_revoke.test.ts  create_stream.test.ts  fixture.ts  integration_edge.test.ts  property.test.ts  utils.ts  vestalink.ts  vesting_types.test.ts  withdraw.test.ts
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/create/: page.tsx
frontend/app/recipient/: page.tsx
frontend/app/stream/[id]/: page.tsx
frontend/components/: preferences-provider.tsx  privy-provider.tsx  scroll-to-top.tsx  site-header.tsx  status-pill.tsx  stream-card.tsx
frontend/lib/: devnet-tokens.ts  i18n.ts  idl.ts  vesting.ts
