[package]
name = "vestalink"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vestalink"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[dev-dependencies]
litesvm = "0.7"
spl-token = { version = "8", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7", features = ["no-entrypoint"] }
sha2 = "0.10"
solana-sdk = "2.1"
solana-program = "2.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(coverage_nightly)'] }
